# groundnotes

./: .gitignore  README.md  pom.xml  pyproject.toml
src/groundnotes/core/: io.py
src/main/java/com/groundnotes/: Main.java
