[project]
name = "groundnotes"
version = "0.1.0"
description = "Table-first notebook for reproducible data notes (pandas/parquet)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pandas>=3.0",
  "pyarrow>=20"
]

[project.scripts]
groundnotes = "groundnotes.cli:app"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
